eks/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dataiesb-app
  namespace: default
  labels:
    app: dataiesb-app
  annotations:
    keel.sh/approvals: "none"
    keel.sh/policy: "force"
    keel.sh/trigger: "poll"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dataiesb-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: dataiesb-app
      annotations:
        keel.sh/approvals: "none"
        keel.sh/policy: "force"
        keel.sh/trigger: "webhook"
    spec:
      containers:
        - name: dataiesb-container
          image: 248189947068.dkr.ecr.us-east-1.amazonaws.com/dataiesb-site:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
              protocol: TCP
            - containerPort: 8501
              protocol: TCP
          volumeMounts:
            - name: dataiesb-storage
              mountPath: /app/data
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
            allowPrivilegeEscalation: false
      volumes:
        - name: dataiesb-storage
          persistentVolumeClaim:
            claimName: dataiesb-ebs-pvc
      restartPolicy: Always
