eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dataiesb-svc
  namespace: default
  labels:
    app: dataiesb-app
spec:
  selector:
    app: dataiesb-app
  ports:
    - name: http
      port: 80
      targetPort: 8501
      protocol: TCP
  type: ClusterIP
